# goQuant-

./: CMakeLists.txt  readme.md
goQuant/src/: main.cpp
src/: main.cpp
src/models/: AlmgrenChriss.cpp  AlmgrenChriss.h  FeeModel.cpp  FeeModel.h  SlippageModel.cpp  SlippageModel.h
src/ui/: InputPanel.cpp  MainWindow.cpp  MainWindow.h  OutputPanel.cpp
src/websocket/: WebSocketClient.cpp  WebSocketClient.h
